--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "liveServer.settings.multiRootWorkspaceName": "project"
+    "liveServer.settings.multiRootWorkspaceName": "project",
+    "cSpell.words": [
+        "Lawrenceville"
+    ]
 }
